         module which does not require Text::MultiMarkdown.     
         Text::MultiMarkdown now inherits from Text::Markdown and adds the
         additional MultiMarkdown functionality. This is a *large* change to
         the module's internals, but is much more in the spirit of the 
         original Markdown project (and should silence most complaints about 
         how the code works, and possible even stop John Gruber hating my 
         guts).
         
         If you were using Text::Markdown previously, but relying on an 
         implicit MultiMarkdown feature, this *could be a breaking change*.
       
         Detailed description of any possible user visible changes below:
         
         - Text::Markdown will no longer support the following features, which 
           were not in original Markdown, but were previously supported after
           the code merge:
            . Cross references to images and headers (would not work without 
            the relevant id attributes switched on)
            . Additional attribute specification for images and links.
           If you are relying on these features, it is recommended that you 
           use Text::MultiMarkdown (configured as you prefer), as these are 
           not supported features in the original Markdown.
         - MultiMarkdown only - Changed order of attributes in image tags, id 
           will no longer be the first attribute.
           Old output:  <img id="image" src="http://path.to/image" alt="image" title="Image title" width="40px" height="400px" />
           New output: <img src="http://path.to/image" alt="image" title="Image title" id="image" width="40px" height="400px" />
         
           This is due to the code re-organisation, moving the id attribute 
           around shouldn't affect anything that isn't relying on the 
           attribute ordering (which is meant to be unimportant in HTML), and 
           allows for simplification of the unified code.